<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/background_start"
            android:id="@+id/image_background"
            android:scaleType="centerCrop"
    />
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_alignParentBottom="true">

            <TextView
                    android:id="@+id/title_main"
                    android:textSize="34sp"
                    android:textColor="@color/titleColorWhite"
                    android:text="@string/title_name"
                    android:layout_marginStart="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="32dp"/>

            <TextView
                    android:id="@+id/description_main"
                    android:textSize="16dp"
                    android:textColor="@color/titleColorWhite"
                    android:text="@string/description_main"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="48dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"/>

            <Button
                    android:id="@+id/button_logIn"

                    android:text="@string/button_signUp"
                    android:background="@drawable/button_color_white"

                    android:textColor="@color/screenColor"
                    android:textSize="16sp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <Button
                    android:id="@+id/button_signUp"

                    android:text="@string/button_logIn"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:background="@drawable/button_color_green"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginTop="8dp"

                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"/>
            <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="@color/titleColorWhite"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="48dp"
            />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>