<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar

            android:id="@+id/code_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/titleColorWhite"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp">
    </androidx.appcompat.widget.Toolbar>



    <TextView
            android:id="@+id/title_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_code"
            android:textSize="34dp"
            android:textColor="@color/titleColorDark"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/code_toolbar"
    />
    <TextView
            android:id="@+id/registration_enter_your_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/title_code"
            android:text="@string/sent_code"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"

    />

    <EditText
            android:id="@+id/add_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/registration_enter_your_name_text_view"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/edittext_color"
            android:hint="@string/valid_code"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:inputType="phone"
    />

    <Button
            android:id="@+id/button_get_code"
            android:text="Отправить"
            android:textColor="@color/titleColorWhite"
            android:textSize="16dp"
            android:background="@drawable/button_color_green"
            app:layout_constraintTop_toBottomOf="@id/add_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>